--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,8 @@
 ---
 import Layout from '../components/Layout.astro';
-import FeedbackForm from '../components/FeedbackForm.astro';
 ---
 
-<Layout title="Astro Toolbox">
+<Layout title="">
   <main>
     <div class="header">
       <div class="logo">
@@ -31,12 +30,6 @@ import FeedbackForm from '../components/FeedbackForm.astro';
       >! Happy coding!
     </p>
     </div>
-    <FeedbackForm />
-    <a class="jokes-link" href="/api/joke">
-    <h3>
-      Click here for function-loaded jokes!
-    </h3>
-    </a>
   </main>
 </Layout>
 
