--- a/src/components/Layout.astro
+++ b/src/components/Layout.astro
@@ -11,8 +11,8 @@ const { title } = Astro.props as Props;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <title>{title}</title>
+    <link rel="icon" type="image/x-icon" href="/icons/Cash-icon.png" />
+    <title>EC{title? ` - ${title}`: ""}</title>
   </head>
   <body>
     <slot />
