--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,6 @@
 ---
+import Header from '../components/react/Header';
+
 export interface Props {
   title: string;
 }
@@ -15,7 +17,9 @@ const { title } = Astro.props as Props;
     <title>EC{title? ` - ${title}`: ""}</title>
   </head>
   <body>
+    <Header client:load />
     <slot />
+    
   </body>
 </html>
 
